@@ -2,134 +2,157 @@ package com.example.demo.service;
 
 import com.example.demo.dto.PatientDto;
 import com.example.demo.dto.PatientSingleDto;
+import com.example.demo.dto.ProblemDtoForPatientSingleDto;
 import com.example.demo.entity.Patient;
+import com.example.demo.entity.Problem;
 import com.example.demo.exception.PatientNotFoundException;
 import com.example.demo.repository.PatientRepository;
 import jakarta.validation.Valid;
-import org.modelmapper.ModelMapper;
 import org.slf4j.Logger;
 import org.springframework.stereotype.Service;
 
-import java.text.SimpleDateFormat;
-import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
 
 @Service
 public class PatientService {
-	private static final SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd HH:mm");
 
-	private final PatientRepository patientRepository;
-	private final ModelMapper modelMapper;
-	private final Logger logger;
+    private final PatientRepository patientRepository;
+    private final Logger logger;
 
-	public PatientService(PatientRepository patientRepository, ModelMapper modelMapper, Logger logger) {
-		this.patientRepository = patientRepository;
-		this.modelMapper = modelMapper;
-		this.logger = logger;
-	}
+    public PatientService(PatientRepository patientRepository, Logger logger) {
+        this.patientRepository = patientRepository;
+        this.logger = logger;
+    }
 
-	public List<PatientDto> findAll() throws Exception {
-		try { 
-			// List<Patient> patients = patientRepository.findAllByOrderByPatientidAsc();
-			List<Patient> patients = patientRepository.findAllByStatusEquelsOne();
-			if (patients.size() < 1) {
-				logger.error("There is never patients ");
-				throw new PatientNotFoundException("There is never patient ");
-			}
-			PatientDto[] dtos = modelMapper.map(patients, PatientDto[].class);
-			List<PatientDto> patientDtos = Arrays.asList(dtos);
-			patientDtos.forEach(patient->{
-				patient.getProblems().forEach(problem->{
-					problem.setPId(patient.getPatientid());
-				});
-			});
-			return Arrays.asList(dtos);
-		} catch (Exception e) {
-			throw new Exception(e);
-		}
-	}
+        public List<PatientDto> findAll() {
+        List<Patient> patients = patientRepository.findAllByStatusEquelsOne();
 
-	public List<PatientDto> findAllDeletedPatients() { 
-		List<Patient> patients = patientRepository.findAllByStatusEquelsZero(); 
-		if (patients.size() > 0) { 
-			PatientDto[] authorDtos = modelMapper.map(patients, PatientDto[].class);
-			return Arrays.asList(authorDtos);
-		} else {
-			logger.error("There is no deleted patient ");
-			throw new PatientNotFoundException("There is no deleted patient "); 
-		}
-	}
+        if (patients.isEmpty()) {
+            logger.warn("No active patients found");
+            return List.of();
+        }
 
-	public Patient save(Patient patient) {
-		patient.setStatus(1);
-		patient = patientRepository.save(patient);
-		if (patient.getPatientid() > -1)
-			return patient;
-		else{
-			logger.error("A problem occurred during saving patient" );
-			throw new PatientNotFoundException("A problem occurred during saving patient" );
-		}
-	}
+        return patients.stream().map(p -> {
+            PatientDto dto = new PatientDto();
+            dto.setPatientid(p.getPatientid());
+            dto.setName(p.getName());
+            dto.setLastname(p.getLastname());
+            dto.setEmail(p.getEmail());
+            dto.setBornDate(p.getBornDate());
+            dto.setCity(p.getCity());
+            return dto;
+        }).toList();
+    }
 
-	public Boolean delete(@Valid Long patientid) throws Exception {
-		Optional<Patient> optPatient = patientRepository.findById(patientid);
-		if (optPatient.isPresent()) { 
-			optPatient.get().setStatus(0);
-			optPatient.get().getProblems().forEach(p -> {
-				p.setStatus(0);
-			});
-			patientRepository.save(optPatient.get());
-			// patientRepository.delete(optpatient.get());
-			return true;
-		} else {
-			logger.error("--Patient does not exist with this id " + patientid);
-			throw new PatientNotFoundException("Patient does not exist with this id " + patientid); 
-		}
-	}
+    
+    public List<PatientDto> findAllDeletedPatients() {
+        List<Patient> patients = patientRepository.findAllByStatusEquelsZero();
 
-	public PatientSingleDto findByPatientId(Long patientid) throws Exception {
-		Optional<Patient> optPatient = patientRepository.findById(patientid);
-		if (optPatient.isPresent()) { 
-			optPatient.get().getProblems().removeIf(problem -> problem.getStatus() == 0);
-			PatientSingleDto dto = modelMapper.map(optPatient.get(), PatientSingleDto.class); 
-			return dto;
-		} else { 
-			logger.error("--Patient does not exist with this id " + patientid);
-			throw new PatientNotFoundException("Patient does not exist with this id " + patientid);
-		}
-	}
+        if (patients.isEmpty()) {
+            throw new PatientNotFoundException("There is no deleted patient");
+        }
 
-	public Patient findByEmail(String email) throws Exception {
-		Optional<Patient> patient = patientRepository.findByEmail(email);
-		if (patient.isPresent()) 
-			return patient.get();
-		else { 
-			logger.error("--Patient does not exist with this email " + email);
-			throw new PatientNotFoundException("Patient does not exist with this email " + email);
-		}
-	}
+        return patients.stream().map(p -> {
+            PatientDto dto = new PatientDto();
+            dto.setPatientid(p.getPatientid());
+            dto.setName(p.getName());
+            dto.setLastname(p.getLastname());
+            dto.setEmail(p.getEmail());
+            dto.setBornDate(p.getBornDate());
+            dto.setCity(p.getCity());
+            return dto;
+        }).toList();
+    }
 
-	public Boolean update(Long patientid, @Valid Patient patient) throws Exception {
-		Optional<Patient> p = patientRepository.findById(patientid);
-		if (p.isPresent()) { 
-			patient.setPatientid(patientid);
-			patientRepository.save(patient); 
-			return true;
-		} else {
-			logger.error("--Patient does not exist with this id " + patientid);
-			throw new PatientNotFoundException("Patient does not exist with this id " + patientid);
-		}
-	}
+    
+    public Patient save(@Valid Patient patient) {
+        patient.setStatus(1);
+        Patient savedPatient = patientRepository.save(patient);
 
-	public List<Patient> findByName(String name) throws Exception { 
-		List<Patient> patients = patientRepository.findByName(name);
-		if (patients.size() > 0) { 
-			return patients;
-		} else { 
-			logger.error("--Patient does not exist with this name " + name);
-			throw new PatientNotFoundException("Patient does not exist with this name " + name);
-		}
-	}
+        if (savedPatient.getPatientid() == null) {
+            throw new PatientNotFoundException("Error while saving patient");
+        }
+        return savedPatient;
+    }
 
+       public Boolean delete(Long patientid) {
+        Patient patient = patientRepository.findById(patientid)
+                .orElseThrow(() ->
+                        new PatientNotFoundException("Patient does not exist with id " + patientid));
+
+        patient.setStatus(0);
+
+        if (patient.getProblems() != null) {
+            patient.getProblems().forEach(p -> p.setStatus(0));
+        }
+
+        patientRepository.save(patient);
+        return true;
+    }
+
+    
+    public PatientSingleDto findByPatientId(Long patientid) {
+        Patient patient = patientRepository.findById(patientid)
+                .orElseThrow(() ->
+                        new PatientNotFoundException("Patient does not exist with id " + patientid));
+
+        PatientSingleDto dto = new PatientSingleDto();
+        dto.setPatientid(patient.getPatientid());
+        dto.setName(patient.getName());
+        dto.setLastname(patient.getLastname());
+        dto.setEmail(patient.getEmail());
+        dto.setBornDate(patient.getBornDate());
+        dto.setCity(patient.getCity());
+        dto.setGender(patient.getGender());
+        dto.setPhoneNo(patient.getPhoneNo());
+
+        if (patient.getProblems() != null) {
+            List<ProblemDtoForPatientSingleDto> problemDtos =
+                    patient.getProblems().stream()
+                            .filter(p -> p.getStatus() == 1)
+                            .map(p -> mapProblemToDto(p, patient.getPatientid()))
+                            .toList();
+
+            dto.setProblems(problemDtos);
+        }
+
+        return dto;
+    }
+
+        private ProblemDtoForPatientSingleDto mapProblemToDto(Problem p, Long patientId) {
+        ProblemDtoForPatientSingleDto dto = new ProblemDtoForPatientSingleDto();
+        dto.setProblemid(p.getProblemid());
+        dto.setProblemName(p.getProblemName());
+        dto.setProblemDetail(p.getProblemDetail());
+        dto.setProblemStatus(p.getProblemStatus());
+        dto.setPId(patientId);
+        dto.setStatus(p.getStatus());
+        dto.setCreationDate(p.getCreationDate());
+        return dto;
+    }
+
+        public Patient findByEmail(String email) {
+        return patientRepository.findByEmail(email)
+                .orElseThrow(() ->
+                        new PatientNotFoundException("Patient does not exist with this email " + email));
+    }
+
+        public Boolean update(Long patientid, @Valid Patient patient) {
+        patientRepository.findById(patientid)
+                .orElseThrow(() ->
+                        new PatientNotFoundException("Patient does not exist with id " + patientid));
+
+        patient.setPatientid(patientid);
+        patientRepository.save(patient);
+        return true;
+    }
+
+        public List<Patient> findByName(String name) {
+        List<Patient> patients = patientRepository.findByName(name);
+
+        if (patients.isEmpty()) {
+            throw new PatientNotFoundException("Patient does not exist with name " + name);
+        }
+        return patients;
+    }
 }
